day3/configmap-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-vol-pod
spec:
  containers:
  - name: mypod
    image: nginx
    volumeMounts:
    - name: cm-vol
      mountPath: "/etc/config"
  volumes:
  - name: cm-vol
    configMap:
      name: my-configmap
