day3/my-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  volumes:
    - name: secret-volume
      secret:
        secretName: my-sec2
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env; while true; do sleep 3600; done" ]
      volumeMounts:
        - name: secret-volume
          mountPath: /secrets
