day3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: '*.172.16.1.133.nip.io'
    http:
      paths:
      - backend:
          service:
            name: test-ingress-svc
            port:
              number: 80
        path: /app1
        pathType: Prefix
  - host: "cars.172.16.1.133.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cars-svc
            port:
              number: 80
  - host: "flowers.172.16.1.133.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flowers-svc
            port:
              number: 80
